; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_proc.c_session_find_internal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_proc.c_session_find_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.session = type { i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.session* }
%struct.TYPE_4__ = type { %struct.session* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.session* @session_find_internal(i64 %0) #0 {
  %2 = alloca %struct.session*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.session*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call %struct.TYPE_4__* @SESSHASH(i64 %5)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.session*, %struct.session** %7, align 8
  store %struct.session* %8, %struct.session** %4, align 8
  br label %9

9:                                                ; preds = %21, %1
  %10 = load %struct.session*, %struct.session** %4, align 8
  %11 = icmp ne %struct.session* %10, null
  br i1 %11, label %12, label %26

12:                                               ; preds = %9
  %13 = load %struct.session*, %struct.session** %4, align 8
  %14 = getelementptr inbounds %struct.session, %struct.session* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %3, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load %struct.session*, %struct.session** %4, align 8
  store %struct.session* %19, %struct.session** %2, align 8
  br label %27

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20
  %22 = load %struct.session*, %struct.session** %4, align 8
  %23 = getelementptr inbounds %struct.session, %struct.session* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load %struct.session*, %struct.session** %24, align 8
  store %struct.session* %25, %struct.session** %4, align 8
  br label %9

26:                                               ; preds = %9
  store %struct.session* null, %struct.session** %2, align 8
  br label %27

27:                                               ; preds = %26, %18
  %28 = load %struct.session*, %struct.session** %2, align 8
  ret %struct.session* %28
}

declare dso_local %struct.TYPE_4__* @SESSHASH(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
